--- a/app/views/firmen/show.html.erb
+++ b/app/views/firmen/show.html.erb
@@ -1,3 +1,7 @@
+<%= link_to firmen_path do %>
+  <span class='glyphicon glyphicon-menu-left' aria-hidden='true'></span> Alle Firmen
+<% end %>
+
 <h1>
   <%= @firma.name %>
     <% if is_editor? %>
