--- a/app/views/schiffe/show.html.erb
+++ b/app/views/schiffe/show.html.erb
@@ -1,8 +1,11 @@
+<%= link_to schiffe_path do %>
+  <span class='glyphicon glyphicon-menu-left' aria-hidden='true'></span> Alle Schiffe
+<% end %>
+
 <h1>
   <%= @schiff.name %>
   <% if is_editor? %>
     <div class="btn-group header-buttons">
-      <%= link_to 'Alle Schiffe', schiffe_path, class: "btn btn-primary" %>
       <%= link_to 'Bearbeiten', edit_schiff_path(@schiff), class: "btn btn-primary" %>
       <%= link_to 'Löschen', @schiff, method: :delete, data: { confirm: 'Willst du das Schiff wirklich löschen?' }, class: "btn btn-danger" %></td>
     </div>
