--- a/app/views/anlagen/show.html.erb
+++ b/app/views/anlagen/show.html.erb
@@ -1,3 +1,7 @@
+<%= link_to anlagen_path do %>
+  <span class='glyphicon glyphicon-menu-left' aria-hidden='true'></span> Alle Anlagen
+<% end %>
+
 <h1>
   <%= @anlage.name %> 
   <% if is_editor? %>
