--- a/app/views/application/_text_down.html.erb
+++ b/app/views/application/_text_down.html.erb
@@ -1,1 +1,1 @@
-<button type="button" class="btn btn-default btn-xs"><span class="glyphicon glyphicon-<%= icon %>"></span></button>
+<button type="button" class="btn btn-default btn-xs"><span class="glyphicon glyphicon-arrow-down"></span></button>
