--- a/app/views/stoffe/show.html.erb
+++ b/app/views/stoffe/show.html.erb
@@ -1,3 +1,7 @@
+<%= link_to stoffe_path do %>
+  <span class='glyphicon glyphicon-menu-left' aria-hidden='true'></span> Alle Stoffe
+<% end %>
+
 <h1>
   <%= @stoff.bezeichnung %>
   <% if is_editor? %>
