updates und mehr Abbrechen-Buttons

--- a/app/views/beobachtungen/_form.html.erb
+++ b/app/views/beobachtungen/_form.html.erb
@@ -281,6 +281,7 @@
   </div>
   
   <div class="actions">
-    <%= f.submit class: "btn btn-primary" %>
+    <%= f.submit class: "btn btn-success" %>
+    <%= link_to 'Abbrechen', @beobachtung, class: "btn btn-danger" %>
   </div>
 <% end %>
