--- a/app/views/durchfahrtsorte/_form.html.erb
+++ b/app/views/durchfahrtsorte/_form.html.erb
@@ -42,6 +42,7 @@
       
       <div class="actions">
         <%= f.submit class: "btn btn-success" %>
+        <%= link_to 'Abbrechen', @durchfahrtsort.route, class: "btn btn-danger" %>
       </div>
       
     </div>
