--- a/app/views/anlagen/_form.html.erb
+++ b/app/views/anlagen/_form.html.erb
@@ -66,6 +66,7 @@
   </div>
   
   <div class="actions">
-    <%= f.submit class: "btn btn-primary" %>
+    <%= f.submit class: "btn btn-success" %>
+    <%= link_to 'Abbrechen', @anlage, class: "btn btn-danger" %>
   </div>
 <% end %>
