--- a/app/views/beobachtungen/edit.html.erb
+++ b/app/views/beobachtungen/edit.html.erb
@@ -1,6 +1,3 @@
-<h1>Editing beobachtung</h1>
+<h1>Beobachung bearbeiten</h1>
 
 <%= render 'form' %>
-
-<%= link_to 'Show', @beobachtung %> |
-<%= link_to 'Back', beobachtungen_path %>
