--- a/app/views/firmen/_form.html.erb
+++ b/app/views/firmen/_form.html.erb
@@ -26,6 +26,7 @@
     </div>
   </div>
   <div class="actions">
-    <%= f.submit class: "btn btn-primary" %>
+    <%= f.submit class: "btn btn-success" %>
+    <%= link_to 'Abbrechen', @firma, class: "btn btn-danger" %>
   </div>
 <% end %>
