--- a/app/views/routen/_form.html.erb
+++ b/app/views/routen/_form.html.erb
@@ -1,6 +1,3 @@
-
-
-
 <%= form_for(@route) do |f| %>
   <% if @route.errors.any? %>
     <div id="error_explanation">
@@ -25,9 +22,9 @@
       </div>
     </div>
     <div class="panel-footer">
-      <div class="actions">
+     <div class="actions">
         <%= f.submit class: "btn btn-success" %>
-        <%= link_to 'Abbrechen', routen_path, class: "btn btn-primary" %>
+        <%= link_to 'Abbrechen', @route, class: "btn btn-danger" %>
       </div>
     </div>
   </div>
