--- a/app/views/beobachtungen/_form.html.erb
+++ b/app/views/beobachtungen/_form.html.erb
@@ -45,14 +45,20 @@
             });
           </script>
         </div>
-      </div>
-      
-      <div class="panel panel-default">
+      </div> 
+    </div>
+    <div class="col-sm-6">
+      <%= render "orte/ort_eingabe", ort: @ort, titel: "Standort eintragen" %>
+    </div>
+
+  </div>
+  
+  <div class="panel panel-default">
         <div class="panel-heading">
           <h3 class="panel-title">Verkehrsmittel</h3>
         </div>    
         <div class="panel-body"> 
-          <p>Bitte vor dem weiteren Ausfüllen angeben!</p>
+          <p><strong>Bitte vor dem weiteren Ausfüllen angeben!</strong></p>
           <div class="form-group">
             <% if @beobachtung.verkehrstraeger == nil %>
               <%= f.select :verkehrstraeger, options_for_select(VERKEHRSTRAEGER_COMBOBOX, "unbekannt"), {}, class: "form-control" %>
@@ -62,14 +68,6 @@
           </div>
         </div>
       </div>
-    </div>
-    
-    
-    <div class="col-sm-6">
-      <%= render "orte/ort_eingabe", ort: @ort, titel: "Standort eintragen" %>
-    </div>
-
-  </div>
        
   <div class="panel panel-default" id="beobachtung_kennzeichnung" >
     <div class="panel-heading">
@@ -79,46 +77,47 @@
       <div class="row">
       
         <div class="col-sm-6">
-          <h4>Gefahrzeichen</h4>
-          <p>Wähle die Zeichen aus, die am Behälter angebracht waren.</p>
+          <h4>Gefahrgut-Symbol</h4>
+          <p>Wähle die Zeichen aus, die am Behälter oder Fahrzeug angebracht waren.</p>
           <div class="btn-group" data-toggle="buttons">
             <% if @beobachtung.kennzeichen_radioaktiv %>
               <label class="btn btn-default active">
             <% else %>
               <label class="btn btn-default">
             <% end %>
-                <%= f.check_box :kennzeichen_radioaktiv %> 
-                <%= image_tag "radioaktiv.png", alt: "radioaktiv", size: "70x70", id: "radioaktiv_kennzeichen" %>
-              </label>
-            <% if @beobachtung.kennzeichen_aetzend %>
-              <label class="btn btn-default active">
-            <% else %>
-              <label class="btn btn-default">
-            <% end %>
-                <%= f.check_box :kennzeichen_aetzend %>
-                <%= image_tag "aetzend.png", alt: "ätzend", size: "70x70" %>
+                <%= f.check_box :kennzeichen_radioaktiv, include_hidden: false %> 
+                <%= image_tag "transportsign_radioactive.svg", alt: "radioaktiv", size: "90x90", id: "radioaktiv_kennzeichen" %>
               </label>
             <% if @beobachtung.kennzeichen_spaltbar %>
               <label class="btn btn-default active">
             <% else %>
               <label class="btn btn-default">
             <% end %>
-                <%= f.check_box :kennzeichen_spaltbar %>
-                <%= image_tag "spaltbar.png", alt: "spaltbar", size: "70x70" %>
+                <%= f.check_box :kennzeichen_spaltbar, include_hidden: false %>
+                <%= image_tag "transportsign_fissile.svg", alt: "spaltbar", size: "90x90" %>
+              </label>
+            <% if @beobachtung.kennzeichen_aetzend %>
+              <label class="btn btn-default active">
+            <% else %>
+              <label class="btn btn-default">
+            <% end %>
+                <%= f.check_box :kennzeichen_aetzend, include_hidden: false %>
+                <%= image_tag "transportsign_corrosive.svg", alt: "ätzend", size: "90x90" %>
               </label>
             <% if @beobachtung.kennzeichen_umweltgefaehrdend %>
               <label class="btn btn-default active">
             <% else %>
               <label class="btn btn-default">
             <% end %>
-                <%= f.check_box :kennzeichen_umweltgefaehrdend %>
-                <%= image_tag "umweltgefaehrdend.png", alt: "umweltgefährdend", size: "70x70" %>
+                <%= f.check_box :kennzeichen_umweltgefaehrdend, include_hidden: false %>
+                <%= image_tag "transportsign_pollution.svg", alt: "umweltgefährdend", size: "90x90" %>
               </label>
           </div>
         </div>
         
         <div class="col-sm-6">
           <h4>Orangene Gefahrguttafel</h4>
+          <p>Bei einteiliger Gefahrguttafel bitte im Feld <strong>untere Nummer</strong> angeben</p>
           <div class="row">
             <div class="col-xs-6">
               <div class="form-group">
