--- a/app/views/stoffe/_gefahr_tafel.html.erb
+++ b/app/views/stoffe/_gefahr_tafel.html.erb
@@ -1,4 +1,4 @@
-<div class="gefahrentafel pull-right">
+<div class="gefahrentafel">
   <div class="gefahr-nummer">
     <span><%= gefahr_nummer %></span>
   </div>
