--- a/app/views/stoffe/show.html.erb
+++ b/app/views/stoffe/show.html.erb
@@ -12,8 +12,9 @@
   <% end %>
 </h1>
 
-<%= render "gefahr_tafel", gefahr_nummer: @stoff.gefahr_nummer, un_nummer: @stoff.un_nummer %>
-
+<div class="pull-right">
+  <%= render "gefahr_tafel", gefahr_nummer: @stoff.gefahr_nummer, un_nummer: @stoff.un_nummer %>
+</div>
 <p><%= @stoff.beschreibung %></p>
 
 <h2>Transporte</h2>
