--- a/app/views/durchfahrtsorte/_form.html.erb
+++ b/app/views/durchfahrtsorte/_form.html.erb
@@ -24,8 +24,8 @@
         <div class="panel-body">
           
           <div class="form-group">
-            <%= f.label :index, "Index zum Einfügen" %>
-            <%= f.number_field :index, min: 1, max: @last_index, class: "form-control" %>
+            <%= f.label :reihung, "Index zum Einfügen" %>
+            <%= f.number_field :reihung, min: 1, max: @last_index, class: "form-control" %>
           </div>
         </div>
         <div class="panel panel-default" >
