--- a/app/views/orte/show.html.erb
+++ b/app/views/orte/show.html.erb
@@ -48,6 +48,24 @@
       </div>
     <% end %>
     
+    <% unless @routen.empty? %>
+      <div class="panel panel-default">
+        <div class="panel-heading">
+          <h3 class="panel-title">Transport-Routen</h3>
+        </div>
+        <div class="panel-body">
+          <ul>
+            <% @routen.each do |route| %>
+              <li>
+                <%= link_to route.name, route %>
+              </li>
+            <% end %>
+          </ul> 
+        </div>
+      </div>
+    <% end %>
+    
+    
     <% unless @ort.transporte.empty? %>
       <div class="panel panel-default">
         <div class="panel-heading">
