--- a/app/views/beobachtungen/load_foto.html.erb
+++ b/app/views/beobachtungen/load_foto.html.erb
@@ -12,7 +12,7 @@
               <%= file_field_tag 'upload_foto' %>
             </div>
             <div class="form-group">
-              Urheber*in: <%= text_field_tag "foto_recht", nil, class: "form-control"%>
+            <%= label_tag "foto_recht", "Urheber*in" %><%= text_field_tag "foto_recht", nil, class: "form-control"%>
             </div>
           <%= submit_tag "Foto hochladen", class: "btn btn-primary" %>
         </div>
