--- a/app/views/beobachtungen/_show_beschreibung.html.erb
+++ b/app/views/beobachtungen/_show_beschreibung.html.erb
@@ -3,7 +3,7 @@
       <h2 class="panel-title">Beschreibung</h2>
     </div>
     <div class="panel-body">
-			<div class="row">
+      <div class="row">
         
         <div class="col-sm-6">
           <p>
@@ -85,19 +85,19 @@
           <%= render "stoffe/gefahr_tafel", gefahr_nummer: beobachtung.gefahr_nummer, un_nummer: beobachtung.un_nummer %>
 
           <% if beobachtung.kennzeichen_radioaktiv %>
-            <%= image_tag "radioaktiv.jpg", alt: "radioaktiv", size: "70x70" %>
+            <%= image_tag "transportsign_radioactive.svg", alt: "radioaktiv", size: "70x70" %>
           <% end %>
 
           <% if beobachtung.kennzeichen_aetzend %>
-            <%= image_tag "aetzend.jpg", alt: "ätzend", size: "70x70" %>
+            <%= image_tag "transportsign_corrosive.svg", alt: "ätzend", size: "70x70" %>
           <% end %>
 
           <% if beobachtung.kennzeichen_spaltbar %>
-            <%= image_tag "spaltbar.jpg", alt: "spaltbar", size: "70x70" %>
+            <%= image_tag "transportsign_fissile.svg", alt: "spaltbar", size: "70x70" %>
           <% end %>
 
           <% if beobachtung.kennzeichen_umweltgefaehrdend %>
-            <%= image_tag "umweltgefaehrdend.jpg", alt: "umweltgefährdend", size: "70x70" %>
+            <%= image_tag "transportsign_pollution.svg", alt: "umweltgefährdend", size: "70x70" %>
           <% end %>
 
             <h4>Foto:</h4>
@@ -105,12 +105,14 @@
             <img src="/fotos/<%=beobachtung.foto_path%>" alt="Transport-Foto" width="400">
             <p>
               Aufgenommen von: <%= beobachtung.foto_recht %>
-              <%= link_to "Foto ändern", load_foto_beobachtung_path(beobachtung) %>
+              <% if edit_allowed?(beobachtung.quelle) %>
+                <%= link_to "Foto ändern", load_foto_beobachtung_path(beobachtung), class: "btn btn-primary"  %>
+              <% end %>
             </p>
           <% else %>
-            <p> 
-              <%= link_to "Foto hochladen", load_foto_beobachtung_path(beobachtung) %>
-            </p>
+            <% if edit_allowed?(beobachtung.quelle) %>
+              <%= link_to "Foto hochladen", load_foto_beobachtung_path(beobachtung), class: "btn btn-primary"  %>
+            <% end %>
           <% end %>
 
         </div>
