--- a/app/views/beobachtungen/_eingabehilfe.html.erb
+++ b/app/views/beobachtungen/_eingabehilfe.html.erb
@@ -5,7 +5,7 @@
         </div>
         <div class="panel-body">
           <%= render "beobachtungen/show_eckdaten", beobachtung: beobachtung, titel: "Ort und Zeit" %>
-          <%= render "beobachtungen/show_beschreibung", beobachtung: beobachtung %>
+          <%= render "beobachtungen/show_beschreibung", beobachtung: beobachtung, foto_anzeige: false %>
         </div>
       </div>
 
