--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -49,7 +49,7 @@
             <li><%= link_to "BenutzerInnen-Verwaltung", users_path %></li>
           <% end %>
           <li class="dropdown">
-            <button type="button" class="btn btn-default navbar-btn dropdown-toggle" data-toggle="dropdown">
+            <button type="button" class="btn btn-default navbar-btn dropdown-toggle" data-toggle="dropdown" id="user_menu">
               <span class="glyphicon glyphicon-user"></span> <%= current_user.name %> <span class="caret"></span>
             </button>
             <ul class="dropdown-menu">
