--- a/app/views/orte/create_abschnitt_ort.js.erb
+++ b/app/views/orte/create_abschnitt_ort.js.erb
@@ -1,10 +1,12 @@
 if ('<%=@abschnitt_ort_typ %>' == 'Start'){
   setup_start_ort_wahl('<%=@ort.id %>','<%= @ort.name %>');
-  alert('Hi <%=@ort.id %>');
   $("#ortModal-Start").hide();
+  $('body').removeClass('modal-open');
+  $('.modal-backdrop').remove();
 } else {
   setup_ziel_ort_wahl('<%=@ort.id %>','<%= @ort.name %>');
-  alert('Hi <%=@ort.id %>');
   $("#ortModal-Ziel").hide();
+  $('body').removeClass('modal-open');
+  $('.modal-backdrop').remove();
 }
 
