--- a/app/views/transporte/_form.html.erb
+++ b/app/views/transporte/_form.html.erb
@@ -42,10 +42,10 @@
             <div class="form-group">
               <label>Start-Anlage</label>
               <div class="row">
-                <div class="col-sm-10">
+                <div class="col-sm-8">
                   <%= collection_select(:transport, :start_anlage_id, Anlage.all, :id, :name, {}, class:"form-control") %>
                 </div>
-                <div class="col-sm-2">
+                <div class="col-sm-4">
                   <button class="btn btn-success" data-toggle="modal" data-target="#anlagenModal-" type="button">Neue Anlage</button>
                 </div>
               </div>
@@ -54,10 +54,10 @@
             <div class="form-group">
               <label>Ziel-Anlage</label>
               <div class="row">
-                <div class="col-sm-10">
+                <div class="col-sm-8">
                   <%= collection_select(:transport, :ziel_anlage_id, Anlage.all, :id, :name, {}, class:"form-control") %>
                 </div>
-                <div class="col-sm-2">
+                <div class="col-sm-4">
                   <a class="btn btn-success" data-toggle="modal" data-target="#anlagenModal-" type="button">Neue Anlage</a>
                 </div>
               </div>
@@ -66,10 +66,10 @@
             <div class="form-group">
               <%= f.label :stoff %>
               <div class="row">
-                <div class="col-sm-10">
+                <div class="col-sm-8">
                   <%= collection_select(:transport, :stoff_id, Stoff.all, :id, :bezeichnung, {}, class: "form-control") %>
                 </div>
-                <div class="col-sm-2">
+                <div class="col-sm-4">
                   <button class="btn btn-success" data-toggle="modal" data-target="#stoffModal-" type="button">Neuer Stoff</button>
                 </div>
               </div>
@@ -102,7 +102,7 @@
  
 
         <div class="actions">
-          <%= link_to 'Abbruch', transporte_path, class: "btn btn-primary" %>
+          <%= link_to 'Abbruch', @redirect_params, class: "btn btn-primary" %>
           <%= f.submit "Transport erstellen", class: "btn btn-success" %> 
         </div>
       </div>
