--- a/app/views/anlagen/_form_modal.html.erb
+++ b/app/views/anlagen/_form_modal.html.erb
@@ -11,16 +11,8 @@
         
         <div class="modal-body">
           <%= hidden_field_tag :redirect_params, @redirect_params %>
-          <% if @anlage.errors.any? %>
-            <div id="error_explanation">
-              <h2><%= pluralize(@anlage.errors.count, "error") %> prohibited this anlage from being saved:</h2>
-              <ul>
-              <% @anlage.errors.full_messages.each do |message| %>
-                <li><%= message %></li>
-              <% end %>
-              </ul>
-            </div>
-          <% end %>
+          <%= render 'layouts/objekt_error_messages', objekt: @anlage %>
+
           <div class="form-group">
             <%= f.label :name, "Name" %>
             <%=
