--- a/app/views/beobachtungen/_form.html.erb
+++ b/app/views/beobachtungen/_form.html.erb
@@ -1,11 +1,5 @@
 <%= form_for(@beobachtung) do |f| %>
-  <% if @beobachtung.errors.any? %>
-    <div class="alert alert-danger">
-      <% @beobachtung.errors.full_messages.each do |message| %>
-        <p><%= message %></p>
-      <% end %>
-    </div>
-  <% end %>
+  <%= render 'layouts/objekt_error_messages', objekt: @beobachtung %>
   
   <div class="row">
     <div class="col-sm-6">      
