--- a/app/views/schiffe/_form.html.erb
+++ b/app/views/schiffe/_form.html.erb
@@ -1,5 +1,8 @@
 <%= form_for(@schiff) do |f| %>
 
+  <%= render 'layouts/objekt_error_messages', objekt: @schiff %>
+
+
   <div class="row">
 
     <div class="col-sm-7">
