--- a/app/views/stoffe/_form_modal.html.erb
+++ b/app/views/stoffe/_form_modal.html.erb
@@ -11,16 +11,9 @@
         
         <div class="modal-body">
           <%= hidden_field_tag :redirect_params, @redirect_params %>
-          <% if @stoff.errors.any? %>
-            <div id="error_explanation">
-              <h2><%= pluralize(@anlage.errors.count, "error") %> prohibited this anlage from being saved:</h2>
-              <ul>
-              <% @stoff.errors.full_messages.each do |message| %>
-                <li><%= message %></li>
-              <% end %>
-              </ul>
-            </div>
-          <% end %>
+          
+          <%= render 'layouts/objekt_error_messages', objekt: @stoff %>
+
            
           <div class="form-group">
             <%= f.label :bezeichnung, "Bezeichung" %>
