--- a/app/views/durchfahrtsorte/_durchfahrtsorte_auflistung.html.erb
+++ b/app/views/durchfahrtsorte/_durchfahrtsorte_auflistung.html.erb
@@ -2,10 +2,10 @@
   <p>Bisher keine Durchfahrtsorte erstellt.</p>
 <% else %>
 
-  <table class="table table-striped">
+  <table class="table table-striped" id="durchfahrtsorte_table">
     <thead>
       <tr>
-        <th>reihung</th>
+        <th>Reihung</th>
         <th>Ortsname</th>
         <% if is_editor? %>
           <th></th>
