--- a/app/views/routen/show.html.erb
+++ b/app/views/routen/show.html.erb
@@ -4,31 +4,36 @@
 
 <h1>
   Route: <%= @route.name %>
-  <% if is_editor? %>
+  <% if is_editor? && @route.name !="Unbekannt" %>
     <%= link_to 'Name ändern', edit_route_path(@route), class: "btn btn-primary header-buttons" %>
   <% end %>
 </h1>
 
-<div class="row">
-  <div class="col-sm-6">
-    <h3>
-      Durchfahrtsorte
-      <%= if is_editor?
-        link_to 'Neuer Durchfahrtsort', new_durchfahrtsort_path(route: @route.id), class: "btn btn-success header-buttons"
-      end %>
-    </h3>
-    <%= render "durchfahrtsorte/durchfahrtsorte_auflistung", durchfahrtsorte: @route.ordered_durchfahrtsorte %>
-  
-    <h3>Transporte</h3>
-    <%= render "transporte/show_only_tabelle", transporte: @route.transporte %>
+<% if @route.name != "Unbekannt" %>
+
+  <div class="row">
+    <div class="col-sm-6">
+      <h3>
+        Durchfahrtsorte
+        <%= if is_editor?
+          link_to 'Neuer Durchfahrtsort', new_durchfahrtsort_path(route: @route.id), class: "btn btn-success header-buttons"
+        end %>
+      </h3>
+      <%= render "durchfahrtsorte/durchfahrtsorte_auflistung", durchfahrtsorte: @route.ordered_durchfahrtsorte %>
+    
+      <h3>Transporte</h3>
+      <%= render "transporte/show_only_tabelle", transporte: @route.transporte %>
+    </div>
+    
+    <div class="col-sm-6">
+      <h3>Karte</h3>
+      <div id="map" class="panel" style="height:400px;"></div>
+      <script type="text/javascript">
+        allOrteMap("routen/<%= @route.id %>")
+      </script>
+    </div>
+    
   </div>
-  
-  <div class="col-sm-6">
-    <h3>Karte</h3>
-    <div id="map" class="panel" style="height:400px;"></div>
-    <script type="text/javascript">
-      allOrteMap("routen/<%= @route.id %>")
-    </script>
-  </div>
-  
-</div>
+<% else %>
+  Zu dieser Pseudo-Route dürfen keine Durchfahrtsorte angelegt werden.
+<% end %>
